Finish mobile version

--- a/index.html
+++ b/index.html
@@ -96,20 +96,22 @@
     <section class="speakers"></section>
 
     <section class="partners-section">
-      <div class="partners">
-        <h4 class="partner-text">Partner</h4>
-        <hr />
-        <div class="flex-images-partner">
-          <img src="Images/logo1.png" alt="Mozilla logo" class="logo-partner" />
-          <img src="Images/logo2.png" alt="Google logo" class="logo-partner" />
-          <img src="Images/logo3.png" alt="Naver logo" class="logo-partner" />
-          <img
-            src="Images/logo4.png"
-            alt="Daumkakao logo"
-            class="logo-partner"
-          />
-          <img src="Images/logo5.png" alt="Airbnb logo" class="logo-partner" />
-        </div>
+      <h4 class="partner-text">Partners</h4>
+      <hr />
+      <div class="flex-image">
+        <img src="Images/mozilla.png" alt="Mozilla logo" class="logo-partner" />
+        <img
+          src="Images/logo2.png"
+          alt="Google logo"
+          class="logo-partner logo-size"
+        />
+        <img
+          src="Images/logo3.png"
+          alt="Naver logo"
+          class="logo-partner logo-size"
+        />
+        <img src="Images/logo4.png" alt="Daumkakao logo" class="logo-partner" />
+        <img src="Images/logo5.png" alt="Airbnb logo" class="logo-partner" />
       </div>
     </section>
     <footer class="footer">
