Main page desktop version

--- a/about.html
+++ b/about.html
@@ -9,7 +9,24 @@
   </head>
   <body>
     <section class="main padding">
+      <div class="mobile-menu">
+        <img
+          src="./Images/ClosingIcon.png"
+          alt="closing icon"
+          class="closing-icon"
+        />
+        <ul class="navigation">
+          <a href="index.html" class="logo-imgs"><img src="Images/logo-size.png" class="mobile-logo" alt="logo"></a>
+          <li class="menu"><a href="about.html" class="hover">About</a></li>
+          <li class="menu"><a href="#program" class="hover">Program</a></li>
+          <li class="menu"><a href="#join" class="hover">Join</a></li>
+          <li class="menu"><a href="#sponsor" class="hover">Sponsor</a></li>
+          <li class="menu"><a href="#news" class="hover">News</a></li>
+        </ul>
+      </div>
+      <div class="nav-left">
       <img src="Images/enabled.jpg" class="enabled-menu" alt="enable icon" />
+      </div>
       <div class="headings headings-about">
         <p class="sub-text">"Hello! Digital World"</p>
         <h1 class="main-text">Digital World Global Summit 2022</h1>
