--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           class="closing-icon"
         />
         <ul class="navigation">
+          <a href="index.html" class="logo-imgs"
+            ><img src="Images/logo-size.png" class="mobile-logo" alt="logo"
+          /></a>
           <li class="menu"><a href="about.html" class="hover">About</a></li>
           <li class="menu"><a href="#program" class="hover">Program</a></li>
           <li class="menu"><a href="#join" class="hover">Join</a></li>
@@ -26,7 +29,28 @@
       <div class="nav-left">
         <img src="Images/enabled.jpg" class="enabled-menu" alt="enable icon" />
       </div>
-
+      <header class="desktop-menu">
+        <div class="pre-header">
+          <div class="pre-header-flex">
+            <ion-icon name="logo-facebook" class="icon"></ion-icon>
+            <ion-icon name="logo-twitter" class="icon"></ion-icon>
+            <span class="tabs">English</span>
+            <span class="tabs">Language</span>
+            <span class="tabs">Logout</span>
+          </div>
+        </div>
+        <div class="header">
+          <img src="Images/logo-size.png" class="header-logo" />
+          <ul class="uo-list-header">
+            <li class="menu"><a href="about.html" class="hover">About</a></li>
+            <li class="menu"><a href="#program" class="hover">Program</a></li>
+            <li class="menu"><a href="#join" class="hover">Join</a></li>
+            <li class="menu"><a href="#sponsor" class="hover">Sponsor</a></li>
+            <li class="menu"><a href="#news" class="hover">News</a></li>
+          </ul>
+          <a class="button-nav">Digital Summit</a>
+        </div>
+      </header>
       <div class="headings">
         <p class="sub-text">"Hello! Digital World"</p>
         <h1 class="main-text">Digital World Global Summit 2022</h1>
@@ -57,8 +81,7 @@
           />
           <h5 class="program-text">Lecture</h5>
           <p class="program-paragraph">
-            Exploration of the effect of digital lecture supplementation in
-            modern digital world.
+            Exploration of the effect of digital lecture supplementation.
           </p>
         </div>
         <div class="program">
@@ -69,8 +92,7 @@
           />
           <h5 class="program-text">Exhibition</h5>
           <p class="program-paragraph">
-            From real life into the world of art is a virtual exhibition,
-            offering an experience.
+            From real life into the world of art is a virtual exhibition.
           </p>
         </div>
         <div class="program">
@@ -81,8 +103,7 @@
           />
           <h5 class="program-text">Forum</h5>
           <p class="program-paragraph">
-            The goal of the forum is to show support of digital technologies in
-            modern world.
+            The goal of the forum is to show support of digital technologies.
           </p>
         </div>
         <div class="program">
@@ -93,7 +114,7 @@
           />
           <h5 class="program-text">Workshop</h5>
           <p class="program-paragraph">
-            Set of tasks and goals using open source licences to improve skills.
+            Set of tasks and goals to improve skills in modern world.
           </p>
         </div>
         <div class="program">
@@ -109,6 +130,7 @@
         </div>
       </div>
       <button class="join" id="join">Join Digital World Now</button>
+      <span class="join-now">SEE THE WHOLE PROGRAM</span>
     </section>
     <section class="speakers"></section>
 
@@ -127,7 +149,11 @@
           alt="Naver logo"
           class="logo-partner logo-size"
         />
-        <img src="Images/logo4.png" alt="Daumkakao logo" class="logo-partner" />
+        <img
+          src="Images/logo4.png"
+          alt="Daumkakao logo"
+          class="logo-partner logo-size"
+        />
         <img src="Images/logo5.png" alt="Airbnb logo" class="logo-partner" />
       </div>
     </section>
@@ -144,6 +170,15 @@
         >
       </div>
     </footer>
+
     <script src="./closing-menu.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
