--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet" />
+
     <title>Digital World 2022 Summit</title>
   </head>
   <body>
@@ -40,8 +42,9 @@
           </div>
         </div>
         <div class="header">
-          <img src="Images/logo-size.png" class="header-logo" />
-          <ul class="uo-list-header">
+          <a href="index.html" class="logo-imgs"
+            ><img src="Images/logo-size.png" class="header-logo" />
+          <ul class="uo-list-header"></a>
             <li class="menu"><a href="about.html" class="hover">About</a></li>
             <li class="menu"><a href="#program" class="hover">Program</a></li>
             <li class="menu"><a href="#join" class="hover">Join</a></li>
@@ -77,7 +80,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/presentation.png"
+            src="/Images/lecture.png"
           />
           <h5 class="program-text">Lecture</h5>
           <p class="program-paragraph">
@@ -88,7 +91,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/exhibition.png"
+            src="/Images/visitors.png"
           />
           <h5 class="program-text">Exhibition</h5>
           <p class="program-paragraph">
@@ -99,7 +102,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/conversation.png"
+            src="/Images/group.png"
           />
           <h5 class="program-text">Forum</h5>
           <p class="program-paragraph">
@@ -110,7 +113,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/wrench.png"
+            src="/Images/workshop.png"
           />
           <h5 class="program-text">Workshop</h5>
           <p class="program-paragraph">
@@ -121,7 +124,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/global-network.png"
+            src="/Images/networking.png"
           />
           <h5 class="program-text">Ignite</h5>
           <p class="program-paragraph">
@@ -172,6 +175,7 @@
     </footer>
 
     <script src="./closing-menu.js"></script>
+    <script src="./presenters.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
