Add speakers in javascript

--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
       <button class="join" id="join">Join Digital World Now</button>
       <span class="join-now">SEE THE WHOLE PROGRAM</span>
     </section>
-    <section class="speakers"></section>
+    <section class="speakers">
+      <div class="presenters">
+        <h3 class="featured-speakers">Featured Speakers</h3>
+        <hr>
+      </div>
+    </section>
 
     <section class="partners-section" id="sponsor">
       <h4 class="partner-text">Partners</h4>
