Add all css and html improvments

--- a/about.html
+++ b/about.html
@@ -41,8 +41,7 @@
         </div>
         <div class="header">
           <a href="index.html" class="logo-imgs"
-            ><img src="Images/logo-size.png" class="header-logo" />
-          <ul class="uo-list-header"></a>
+            ><img src="Images/logo-size.png" class="header-logo" /></a>
           <ul class="uo-list-header">
             <li class="menu"><a href="about.html" class="hover">About</a></li>
             <li class="menu"><a href="#program" class="hover">Program</a></li>
