--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
     <section class="speakers">
       <div class="presenters">
         <h3 class="featured-speakers">Featured Speakers</h3>
-        <hr>
+        <hr class="red-line-size" />
       </div>
     </section>
 
     <section class="partners-section" id="sponsor">
       <h4 class="partner-text">Partners</h4>
-      <hr />
+      <hr class="red-line" />
       <div class="flex-image">
         <img src="Images/mozilla.png" alt="Mozilla logo" class="logo-partner" />
         <img
