--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/lecture.png"
+            src="./Images/lecture.png"
           />
           <h5 class="program-text">Lecture</h5>
           <p class="program-paragraph">
@@ -91,7 +91,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/visitors.png"
+            src="./Images/visitors.png"
           />
           <h5 class="program-text">Exhibition</h5>
           <p class="program-paragraph">
@@ -102,7 +102,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/group.png"
+            src="./Images/group.png"
           />
           <h5 class="program-text">Forum</h5>
           <p class="program-paragraph">
@@ -113,7 +113,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/workshop.png"
+            src="./Images/workshop.png"
           />
           <h5 class="program-text">Workshop</h5>
           <p class="program-paragraph">
@@ -124,7 +124,7 @@
           <img
             class="program-img"
             alt="lecture icon"
-            src="/Images/networking.png"
+            src="./Images/networking.png"
           />
           <h5 class="program-text">Ignite</h5>
           <p class="program-paragraph">
