Fixing linters bugs

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet" />
 
     <title>About me</title>
   </head>
@@ -17,8 +17,10 @@
           alt="closing icon"
           class="closing-icon"
         />
+        <a href="index.html" class="logo-imgs"
+          ><img src="Images/logo-size.png" class="mobile-logo" alt="logo"
+        /></a>
         <ul class="navigation">
-          <a href="index.html" class="logo-imgs"><img src="Images/logo-size.png" class="mobile-logo" alt="logo"></a>
           <li class="menu"><a href="about.html" class="hover">About</a></li>
           <li class="menu"><a href="#program" class="hover">Program</a></li>
           <li class="menu"><a href="#join" class="hover">Join</a></li>
@@ -27,7 +29,7 @@
         </ul>
       </div>
       <div class="nav-left">
-      <img src="Images/enabled.jpg" class="enabled-menu" alt="enable icon" />
+        <img src="Images/enabled.jpg" class="enabled-menu" alt="enable icon" />
       </div>
       <header class="desktop-menu">
         <div class="pre-header">
@@ -41,7 +43,8 @@
         </div>
         <div class="header">
           <a href="index.html" class="logo-imgs"
-            ><img src="Images/logo-size.png" class="header-logo" /></a>
+            ><img src="Images/logo-size.png" class="header-logo" alt="logo"
+          /></a>
           <ul class="uo-list-header">
             <li class="menu"><a href="about.html" class="hover">About</a></li>
             <li class="menu"><a href="#program" class="hover">Program</a></li>
@@ -82,61 +85,71 @@
           colourful, these award winning logos reflect a perfect harmony between
           function and design.</span
         >
-        <img class="logo-img" alt="logo image" src="./Images/logo.jpg"/>
+        <img class="logo-img" alt="logo image" src="./Images/logo.jpg" />
       </div>
-    <hr class="black-line" />
+      <hr class="black-line" />
     </section>
     <section class="about-award">
       <div class="award">
         <h3 class="certification">See the past Digital World Summits</h3>
         <hr />
         <span class="logo-award"
-          >Take a look at the last two Digital World Summits which took place in Argentina.</span
-        ></section>
-        <section class="events">
-        <div class="carousel">
-          <img class="card" alt="conference" src="Images/conf1.jpg">
-          <h4 class="year">2020</h4><p class="text-event">Digital Summit</p>
-        </div>
-        <div class="carousel">
-          <img class="card" alt="conference" src="Images/conf2.jpg">
-          <h4 class="year">2021</h4><p class="text-event">Digital Summit</p>
-        </div>
-      </section>
-      <section class="partners-section">
-        <h4 class="partner-text">Partners</h4>
-        <hr />
-        <div class="flex-image">
-          <img src="Images/mozilla.png" alt="Mozilla logo" class="logo-partner" />
-          <img
-            src="Images/logo2.png"
-            alt="Google logo"
-            class="logo-partner logo-size"
-          />
-          <img
-            src="Images/logo3.png"
-            alt="Naver logo"
-            class="logo-partner logo-size"
-          />
-          <img src="Images/logo4.png" alt="Daumkakao logo" class="logo-partner logo-size" />
-          <img src="Images/logo5.png" alt="Airbnb logo" class="logo-partner" />
-        </div>
-      </section>
-      <footer class="footer">
-        <div class="footer-section">
-          <img
-            src="Images/logo.jpg"
-            alt="Digital world logo"
-            class="logo-digital"
-          />
-          <span class="footer-span"
-            >2022 San Francisco United States. <br />
-            Some Rights Reserved.</span
-          >
-        </div>
-      </footer>
-      <script src="./closing-menu.js"></script>
-      <script
+          >Take a look at the last two Digital World Summits which took place in
+          Argentina.</span
+        >
+      </div>
+    </section>
+    <section class="events">
+      <div class="carousel">
+        <img class="card" alt="conference" src="Images/conf1.jpg" />
+        <h4 class="year">2020</h4>
+        <p class="text-event">Digital Summit</p>
+      </div>
+      <div class="carousel">
+        <img class="card" alt="conference" src="Images/conf2.jpg" />
+        <h4 class="year">2021</h4>
+        <p class="text-event">Digital Summit</p>
+      </div>
+    </section>
+
+    <section class="partners-section">
+      <h4 class="partner-text">Partners</h4>
+      <hr />
+      <div class="flex-image">
+        <img src="Images/mozilla.png" alt="Mozilla logo" class="logo-partner" />
+        <img
+          src="Images/logo2.png"
+          alt="Google logo"
+          class="logo-partner logo-size"
+        />
+        <img
+          src="Images/logo3.png"
+          alt="Naver logo"
+          class="logo-partner logo-size"
+        />
+        <img
+          src="Images/logo4.png"
+          alt="Daumkakao logo"
+          class="logo-partner logo-size"
+        />
+        <img src="Images/logo5.png" alt="Airbnb logo" class="logo-partner" />
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-section">
+        <img
+          src="Images/logo.jpg"
+          alt="Digital world logo"
+          class="logo-digital"
+        />
+        <span class="footer-span"
+          >2022 San Francisco United States. <br />
+          Some Rights Reserved.</span
+        >
+      </div>
+    </footer>
+    <script src="./closing-menu.js"></script>
+    <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
     ></script>
