--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           alt="closing icon"
           class="closing-icon"
         />
+        <a href="index.html" class="logo-imgs"
+          ><img src="Images/logo-size.png" class="mobile-logo" alt="logo"
+        /></a>
         <ul class="navigation">
-          <a href="index.html" class="logo-imgs"
-            ><img src="Images/logo-size.png" class="mobile-logo" alt="logo"
-          /></a>
           <li class="menu"><a href="about.html" class="hover">About</a></li>
           <li class="menu"><a href="#program" class="hover">Program</a></li>
           <li class="menu"><a href="#join" class="hover">Join</a></li>
@@ -43,8 +43,9 @@
         </div>
         <div class="header">
           <a href="index.html" class="logo-imgs"
-            ><img src="Images/logo-size.png" class="header-logo" />
-          <ul class="uo-list-header"></a>
+            ><img src="Images/logo-size.png" class="header-logo" alt="logo"
+          /></a>
+          <ul class="uo-list-header">
             <li class="menu"><a href="about.html" class="hover">About</a></li>
             <li class="menu"><a href="#program" class="hover">Program</a></li>
             <li class="menu"><a href="#join" class="hover">Join</a></li>
